# AI-Driven-Autonomous-Sensemaking-Research-Agent

./: .gitignore  AI-Driven-Autonomous-Sensemaking-Research-Agent.code-workspace  CONTRIBUTING.md  MAINSTREAM_ANALYSIS_GUIDE.md  README.md  USER_GUIDE.md  gitpush.ps1  gitpush.sh  run_finance_analysis.ps1  run_finance_analysis_cloud.ps1  run_mainstream_analysis.ps1  run_mainstream_cloud.ps1  run_mainstream_fast.ps1
.github/: copilot-instructions.md
SensemakingAgent/: Graph.cs  Nodes.cs  Program.cs  SensemakingAgent.csproj  State.cs  Tools.cs  Visualizer.cs
docs/: agents.md  architecture.md  implementation-plan.md  implementation-progress.md  plan.md  prd.md  report-spec.md  reuse-from-v1.md  sensemaking-loop.md  state-schema.md
graphragloader/: README.md  RUNBOOK.md  check_status.ps1  check_status.sh  pyproject.toml
graphragloader/src/graphragloader/: __init__.py  cli.py  code_analyzer.py  converter.py  indexer.py  query.py  settings.py
graphragloader/tests/: conftest.py  test_cli.py  test_code_analyzer.py  test_converter.py  test_indexer.py  test_query.py  test_settings.py
patches/: README.md
sensemaking-agent/: .env.example  README.md  check_tavily_usage.py  pyproject.toml
sensemaking-agent/prompts/: README.md  analyst_extract.md  critic_analyze.md  writer_synthesize.md
sensemaking-agent/src/sensemaking_agent/: __init__.py  budget.py  config.py  graph.py  llm_client.py  main.py  prompt_loader.py  state.py  synthesis.py  workflow.py
sensemaking-agent/src/sensemaking_agent/database/: __init__.py  run_artifacts.py
sensemaking-agent/src/sensemaking_agent/nodes/: __init__.py  analyst_node.py  critic_node.py  router_node.py  scout_node.py  writer_node.py
sensemaking-agent/src/sensemaking_agent/tools/: __init__.py  graphrag_tool.py  resource_loader.py  scout_tool.py  scraper_tool.py  search_tool.py
sensemaking-agent/src/sensemaking_agent/visualisation/: __init__.py  exporters.py
sensemaking-agent/tests/: test_analyst.py  test_budget.py  test_critic.py  test_graph.py  test_graphrag_tool.py  test_llm_client.py  test_main.py  test_persistence.py  test_resource_loader.py  test_scout.py  test_state.py  test_visualisation.py  test_workflow.py  test_writer.py
tools/: ollama_proxy.py  start_ollama_proxy.ps1  start_proxy_and_embed_test.ps1  stop_ollama_proxy.ps1
(+19 files in other folders)
