[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensemaking-agent"
version = "0.1.0"
description = "AI-Driven Autonomous Sensemaking Research Agent — graph-grounded relational synthesis with contradiction detection and recursive gap resolution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2,<0.7",
    "networkx>=3.2,<4",
    "pydantic>=2.7,<3",
]

[project.scripts]
sensemaking-agent = "sensemaking_agent.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"